# COSMIC_RAY_THUNDERSTORM-Geant4

./: .gitignore  CMakeLists.txt  Geant4_version  README.md  read_me_removed.txt
Analysis/: CHECK_STATS.m  COPY_FINAL_DATAFILES_FROM_FRAM.sh  DO_ALL.m  EVALUE_FLUX_INCREASE_ADELE2015.m  EVALUE_FLUX_INCREASE_ALOFT1.m  EVALUE_FLUX_INCREASE_EACK1996.m  EVALUE_FLUX_INCREASE_EACK2000.m  EVALUE_FLUX_INCREASE_ILDAS.m  EVALUE_FLUX_INCREASE_SIMULATED_MEASUREMENTS.m  GENERATE_EACK1996_RESPONSE.m  Generate_database_glow_simulations.m  MAKE_BIG_DATAFILES.m  MATLAB_JOB_FRAM.sh  MATLAB_JOB_FRAM_BM.sh  breakxaxis.m  (+21 more)
src/: CMakeLists.txt  mos_test.cc
src/include/: ActionInitialization.hh  AnalysisManager.hh  DetectorConstruction.hh  EventAction.hh  FieldSetup.hh  G4EmStandardPhysics_option1_dr.hh  G4EmStandardPhysics_option3_dr.hh  G4EmStandardPhysics_option4_dr.hh  G4HadronPhysicsFTFP_BERT_LEND.hh  G4RadioactiveDecayPhysics2.hh  G4UniformElectricField_custom.hh  G4UniformElectricField_timeCut.hh  GammaPhysics.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RNGWrapper.hh  RegionInformation.hh  Run.hh  RunAction.hh  SD.hh  Settings.hh  StackingAction.hh  StepMax.hh  SteppingAction.hh  coordinates_conversions.h  cosmic_ray_generator_PARMA.hh  f77char.hh  f77cmplx.hh  f77matrx.hh  fortran.hh  myExceptionHandler.hh  myUtils.hh
src/include/old/: E_Field.hh
src/src/: ActionInitialization.cc  AnalysisManager.cc  DetectorConstruction.cc  EventAction.cc  FieldSetup.cc  G4EmStandardPhysics_option1_dr.cc  G4EmStandardPhysics_option3_dr.cc  G4EmStandardPhysics_option4_dr.cc  G4HadronPhysicsFTFP_BERT_LEND.cc  G4RadioactiveDecayPhysics2.cc  G4UniformElectricField_custom.cc  G4UniformElectricField_timeCut.cc  GammaPhysics.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RNGWrapper.cc  RegionInformation.cc  Run.cc  RunAction.cc  SD.cc  Settings.cc  StackingAction.cc  StepMax.cc  SteppingAction.cc  cosmic_ray_generator_PARMA.cc  myExceptionHandler.cc  myUtils.cc
src/src/C_functions/: coordinates_conversions.c  setlocale_to_avoid_bug.c  sincos.c
src/src/msis/: nrlmsise00_driver.for  nrlmsise00_sub.for  readme.txt
src/src/msis/C/: DOCUMENTATION  nrlmsise-00.c  nrlmsise-00.h  nrlmsise-00_data.c  nrlmsise-00_test.c
src/src/msis/NRLMSIS_F90/: README  physics_msis.f90
src/src/old/: E_Field.cc  nrlmsise-00.c  nrlmsise-00_data.c
src/src/parma/: custom_generator.f90  subroutines.f90
src/src/parma/AngOut/: Ang-AngDep-electr.out  Ang-AngDep-he---4.out  Ang-AngDep-mumins.out  Ang-AngDep-muplus.out  Ang-AngDep-neutro.out  Ang-AngDep-photon.out  Ang-AngDep-positr.out  Ang-AngDep-proton.out  Ang-EnergyDep-electr.out  Ang-EnergyDep-he---4.out  Ang-EnergyDep-mumins.out  Ang-EnergyDep-muplus.out  Ang-EnergyDep-neutro.out  Ang-EnergyDep-photon.out  Ang-EnergyDep-positr.out  Ang-EnergyDep-proton.out
src/src/parma/Condition/: Ang-AngDep.inp  Ang-EnergyDep.inp  ERII-exp.inp  TimeDep-Thule.inp  Tokyo-Smin.inp
src/src/parma/DoseOut/: Ang-AngDep.ICRP116  Ang-EnergyDep.ICRP116  ERII-exp.ICRP116  TimeDep-Thule.ICRP116  Tokyo-Smin.ICRP116
src/src/parma/SpecOut/: ERII-exp.out  s0000-r120-d0001-w-01.out  s0000-r120-d0002-w-01.out  s0000-r120-d0005-g-01.out  s0000-r120-d0010-w-01.out  s0000-r120-d0020-g-01.out  s0000-r120-d0030-g-01.out  s0000-r120-d0040-w-01.out  s0000-r120-d0050-g-01.out  s0000-r120-d0060-w-01.out  s0000-r120-d0070-g-01.out  s0000-r120-d0080-w-01.out  s0000-r120-d0090-g-01.out  s0000-r120-d0100-w-01.out  s0000-r120-d0120-w-01.out  s0000-r120-d0140-w-01.out  s0000-r120-d0160-w-01.out  s0000-r120-d0180-w-01.out  s0000-r120-d0200-g-01.out  s0000-r120-d0220-g-01.out  s0000-r120-d0240-g-01.out  s0000-r120-d0260-w-01.out  s0000-r120-d0280-g-01.out  s0000-r120-d0300-w-01.out  s0000-r120-d0350-g-01.out  s0000-r120-d0400-w-01.out  s0000-r120-d0450-g-01.out  s0000-r120-d0500-w-01.out  s0000-r120-d0550-g-01.out  s0000-r120-d0600-g-01.out  s0000-r120-d0650-g-01.out  s0000-r120-d0700-w-01.out  s0000-r120-d0750-w-01.out  s0000-r120-d0800-g-01.out  s0000-r120-d0850-w-01.out  s0000-r120-d0900-g-01.out  s0000-r120-d0950-g-01.out  s0000-r120-d1000-w-01.out  s0000-r120-d1033-w-01.out  s0000-r120-d1033-w020.out
src/src/parma/dcc/: Air-pGy.inp  ICRP116.inp  NM06tub.inp  h10ICRP.inp
src/src/parma/input/: CORdata.inp
src/src/parma/input/alphaa/: solar-dep.inp
src/src/parma/input/angle/: NeutronGround.out  elepos.out  he---4-Eint.out  muon---Eint.out  muon--.out  neutro-Eint.out  photon-Eint.out
src/src/parma/input/elemag/: Rigid-Dep-EL.inp  Rigid-Dep-PO.inp  bestR-EL.inp  fitting-lowspec-EL.inp  fitting-lowspec-PH.inp  flux511keV.inp  solar-dep-PH.inp  solar-dep-PO.inp
src/src/parma/input/ions/: Combine.inp  Rigid-Dep.inp  solar-dep.inp
src/src/parma/input/muon--/: final135.mins  final135.plus  final2467.mins
src/src/parma/input/neutro/: Aircraft-Dep.inp  Depth-Dep-mid.out  Water-Dep.inp  fitting-lowspec.inp  solar-dep.inp
src/src/parma/old/: CheckGeneration.out  Readme.txt  custom_generator_test.f90  custom_subroutines.f90  lib_array.mod
src/src/parma/stand_alone_fortran_CR_genrator/: a.out  check_fortran_output.m  custom_generator_test.f90  main-generator.f90  main-simple.f90  main-simple_2.f90  main-simple_3.f90  main.f90  parma.mod  subroutines.f90
src/src/parma/stand_alone_fortran_CR_genrator/input/: AtomDepth.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/alphaa/: fitting-lowspec.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/angle/: BkH-neutro.inp  BkH-proton.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/elemag/: bestR-PH.inp  bestR-PO.inp  solar-dep-EL.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/ions/: fitting-lowspec.inp  primary-Si.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/muon--/: final2467.plus
src/src/parma/stand_alone_fortran_CR_genrator/input/neutro/: Geo-Dep.inp  Rigid-Dep.inp  bestR.inp
src/src/parma/stand_alone_fortran_CR_genrator/input/proton/: Rigid-Dep.inp
src/src/parma/stand_alone_fortran_CR_genrator/old/: custom_generator.f90  subroutines.f90
src/src/unique_id/: unique_id_rng_seed.f90
(+7 files in other folders)
